--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav #sidenav mode="side" opened class="sidenav-menu"
                [fixedInViewport]="false">
                <mat-list role="list">
-                <mat-list-item role="listitem"><div routerLink="time">Time</div></mat-list-item>
+                <!-- <mat-list-item role="listitem"><div routerLink="time">Time</div></mat-list-item> -->
                 <mat-list-item role="listitem"><div routerLink="">Projects</div></mat-list-item>
                 <mat-list-item role="listitem"><div routerLink="employee">Employees</div></mat-list-item>
                 <mat-list-item role="listitem"><div routerLink="department">Departments</div></mat-list-item>
